--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:minWidth">0dp</item>
         <item name="android:paddingLeft">@dimen/spacing_base</item>
         <item name="android:paddingRight">@dimen/spacing_base</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="FlatButton.NoPadding" >
