--- a/app/src/main/res/layout/view_spells_filters.xml
+++ b/app/src/main/res/layout/view_spells_filters.xml
@@ -41,11 +41,15 @@
             android:background="@drawable/half_rounded_gray_rectangle"
             android:orientation="vertical"
             android:padding="@dimen/spacing_base"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:setVisibleAnimation="@{model.filterPanelVisible}"
             app:withCLayout="@{parentLayout}">
+
+            <requestFocus/>
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -53,7 +57,8 @@
                 android:checked="@={model.searchWitDesc}"
                 android:text="@string/Spell_Filter_Search_Description"
                 android:textSize="@dimen/textSize_medium"
-                android:textStyle="bold" />
+                android:textStyle="bold">
+            </CheckBox>
 
             <ScrollView
                 android:layout_width="match_parent"
