Mise en place de la gestion des sorts d'accès libre, chenmin aller, reste à gérer la redescente

--- a/app/src/main/res/layout/view_witchspells_free_access.xml
+++ b/app/src/main/res/layout/view_witchspells_free_access.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsFreeAccessViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.freeaccess.WitchspellsFreeAccessViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
