--- a/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
+++ b/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
@@ -7,6 +7,10 @@
         <variable
             name="model"
             type="fr.enlight.anima.animamagiccards.views.viewmodels.RecyclerViewModel" />
+
+        <variable
+            name="listener"
+            type="fr.enlight.anima.animamagiccards.utils.ValidationListener" />
     </data>
 
     <LinearLayout
@@ -14,8 +18,8 @@
         android:layout_height="match_parent"
         android:background="@drawable/other_book_background"
         android:gravity="center"
-        android:padding="@dimen/spacing_large"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/spacing_xlarge">
 
         <TextView
             android:layout_width="match_parent"
@@ -28,11 +32,20 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:minHeight="250dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:minHeight="250dp"
             app:layoutManager="@{model.layoutManager}"
             app:viewModels="@{model.viewModels}" />
+
+        <Button
+            android:id="@+id/validate_button"
+            style="@style/FlatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> listener.onValidateClicked()}"
+            android:text="@string/Common_Validate"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
