--- a/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
+++ b/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
@@ -33,8 +33,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:minHeight="250dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:minHeight="300dp"
+            android:minWidth="300dp"
             app:layoutManager="@{model.layoutManager}"
             app:viewModels="@{model.viewModels}" />
 
